before submit acm
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@221 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/tex/acm/kuramoto.bib
+++ b/tex/acm/kuramoto.bib
@@ -51,7 +51,7 @@ number = "1",
 
 @article {XORSHIFT,
 author = "F. Panneton and P. L'Ecuyer",
-title = "On the Xorshift Random Number Generators",
+title = "On the {Xorshift} Random Number Generators",
 journal = "ACM Transactions on Modeling and Computer Simulation",
 volume = "15",
 year = "2005",
@@ -61,7 +61,7 @@ number = "4",
 
 @article {XORSHIFT-MAR,
 author = "G. Marsaglia",
-title = "Xorshift RNGs",
+title = "Xorshift {RNGs}",
 journal = "Journal of Statistical Software",
 volume = "8",
 year = "2003",
@@ -88,6 +88,14 @@ year = "2004",
 pages = "91--102",
 }
 
+@ARTICLE {FUSHIMI90,
+AUTHOR="M. Fushimi",
+TITLE="Random Number Generation with the Recursion
+   $X_t = X_{t-3p}\oplus X_{t-3q}$",
+JOURNAL={Journal of Computational and Applied Mathematics},
+VOLUME={31},
+YEAR={1990},
+PAGES={105--118}  }
 
 @article {GFSR,
 author = "T.G. Lewis and W.H. Payne",
@@ -244,9 +252,9 @@ pages = "431-442",
 number = "3-61"
 }
 
-@techreport{PMT,
+@article{PMT,
 author = "M. Saito and H. Haramoto and F. Panneton and T. Nishimura and M. Matsumoto",
-title = "Pulmonary LFSR: pseudorandom number generators with 
+title = "Pulmonary {LFSR}: pseudorandom number generators with 
 multiple feedbacks and reducible transitions",
 year = "2006",
 note = "submitted",
